fix home page spacing

--- a/new-design-pages/home-page/style.css
+++ b/new-design-pages/home-page/style.css
@@ -753,7 +753,6 @@ body h5 {
  padding: 80px 20px;
   display: flex;
   width: 100%;
-  max-width: 1385px;
   flex-direction: column;
   align-items: center;
   gap: 32px;
@@ -1011,7 +1010,6 @@ body h5 {
   align-items: center;
   justify-content: space-between;
   gap: 80px;
-  padding: 20px 0px;
 }
 
 .section-left {
@@ -1077,12 +1075,14 @@ body h5 {
 }
 .services-section h2 {
   font-weight: 400;
+  padding-bottom: 50px;
+  margin: 0 auto;
 }
 
 .service-grid {
   display: grid;
   width: 100%;
-  max-width: 1385px;
+
   grid-template-columns: repeat(2, 1fr);
   gap: 70px;
   background-color: white;
@@ -1113,15 +1113,8 @@ body h5 {
   font-weight: 400;
   line-height: 1.3;
 }
-@media (max-width: 1350px) {
-   .services-section{
-    padding: 70px 60px;
-  }
-  
-}
+
 @media (max-width: 1024px) {
-  
- 
   .service-grid {
     grid-template-columns: repeat(1, 1fr);
     padding: 40px 20px;
@@ -1129,9 +1122,6 @@ body h5 {
   }
 }
 @media (max-width: 678px) {
-   .services-section{
-    padding: 70px 20px;
-  }
  
   .service-card p {
   font-size: 17px;
@@ -1146,8 +1136,6 @@ body h5 {
   gap: 20px 0px;
   border-radius: 20px;
   padding: 30px 0px 0px 0px;
-  max-width: 1385px;
-  margin: 0 auto;
 
   text-align: center;
 }
@@ -1156,7 +1144,7 @@ body h5 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 10px;
+  padding: 0 30px;
 }
 .cond-heading h2 {
   margin: 0px auto;
